<resources>
    <string name="app_name">Kotlin Player</string>

    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourite</string>
    <string name="playlist_btn">Playlists</string>

    <string name="total_songs">Total Songs</string>

    <string name="world_of_music">World of Music</string>
    <string name="song_name">Song Name</string>
    <string name="song_album">Song Album</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to\nMood Music</string>

    <string name="feedback">Feedback</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

</resources>