<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/shuffleBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/shuffle_btn"
                android:text="@string/shuffle_btn"
                android:drawableTop="@drawable/shuffle_icon_24"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button.Borderless" />

            <Button
                android:id="@+id/favouriteBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/favourites_btn"
                android:text="@string/favourites_btn"
                android:drawableTop="@drawable/favorite_icon_24"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button.Borderless" />

            <Button
                android:id="@+id/playlistBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/playlist_btn"
                android:text="@string/playlist_btn"
                android:drawableTop="@drawable/playlist_icon_24"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button.Borderless" />


        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_songs"
        android:textColor="@color/black"
        android:layout_margin="10dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>